feat: Add crypto module and support signing

--- a/infra/CMakeLists.txt
+++ b/infra/CMakeLists.txt
@@ -1,9 +1,15 @@
 file(GLOB src
     *.cpp
     detail/*.cpp
+    # web/*.cpp
+)
+set(crypto_src
+    crypto/signer.cpp
+    crypto/ed25519.c
 )
 add_library(infra
     ${src}
+    ${crypto_src}
 )
 target_include_directories(infra PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/..
@@ -14,6 +20,7 @@ target_include_directories(infra PUBLIC
 )
 target_include_directories(infra PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/detail
+    # ${CMAKE_CURRENT_SOURCE_DIR}/web
 )
 target_link_libraries(infra
     nng
