--- a/broker/CMakeLists.txt
+++ b/broker/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(binance)
+
 file(GLOB src
     *.cpp
 )
@@ -12,6 +14,7 @@ set(XTP_LIBS
 
 target_link_libraries(broker
     core
+    binance
     # ${XTP_LIBS}
 )
 target_include_directories(broker PUBLIC
