system: core: Support no-HP mode and pass basic test for both two mode.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -18,4 +18,4 @@ target_include_directories(core PRIVATE
     ${PROJECT_SOURCE_DIR}
 )
 
-configure_file(main_cfg_template.json ${PROJECT_BINARY_DIR}/main_cfg_template.json COPYONLY)
+configure_file(main_cfg.json ${PROJECT_BINARY_DIR}/main_cfg.json COPYONLY)
