thirdparty: Add pybind11

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,3 +23,6 @@ target_link_libraries(journal_epoll_test core)
 # spd test
 add_executable(spdlog_demo spdlog_demo.cpp)
 target_link_libraries(spdlog_demo spdlog::spdlog)
+
+# pybind11 test
+pybind11_add_module(pybind11_test pybind11_test.cpp)
