--- a/broker/backtest/CMakeLists.txt
+++ b/broker/backtest/CMakeLists.txt
@@ -2,4 +2,4 @@ file(GLOB src
     *.cpp
 )
 add_library(backtest_service ${src})
-target_link_libraries(backtest_service core infra)
+target_link_libraries(backtest_service PUBLIC core infra)
