--- a/cp/CMakeLists.txt
+++ b/cp/CMakeLists.txt
@@ -7,4 +7,4 @@ add_library(computation
 target_include_directories(computation PUBLIC
     ${PROJECT_SOURCE_DIR}/strategy
 )
-target_link_libraries(computation strategy core)
+target_link_libraries(computation PUBLIC strategy core)
