--- a/strategies/CMakeLists.txt
+++ b/strategies/CMakeLists.txt
@@ -3,4 +3,4 @@ include_directories(${PROJECT_SOURCE_DIR}/strategy)
 add_library(MyStrategy SHARED
     my_strategy.cpp
 )
-target_link_libraries(MyStrategy strategy)
+target_link_libraries(MyStrategy PUBLIC strategy)
