--- a/td/CMakeLists.txt
+++ b/td/CMakeLists.txt
@@ -7,4 +7,4 @@ add_library(td
 target_include_directories(td PUBLIC
     ${PROJECT_SOURCE_DIR}/broker
 )
-target_link_libraries(td broker core)
+target_link_libraries(td PUBLIC broker core)
