--- a/broker/binance/CMakeLists.txt
+++ b/broker/binance/CMakeLists.txt
@@ -2,4 +2,4 @@ file(GLOB src
     *.cpp
 )
 add_library(binance ${src})
-target_link_libraries(binance core infra)
+target_link_libraries(binance PUBLIC core infra)
