--- a/md/CMakeLists.txt
+++ b/md/CMakeLists.txt
@@ -7,4 +7,4 @@ add_library(md
 target_include_directories(md PUBLIC
     ${PROJECT_SOURCE_DIR}/broker
 )
-target_link_libraries(md broker core)
+target_link_libraries(md PUBLIC broker core)
