feat: core: Support any user-app to communicate with btrader so as to use md,cp,td,etc in btrader

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,6 +2,7 @@ file(GLOB src
     main.cpp
     mentor.cpp
     mentor_run.cpp
+    mentor_send_eventfd.cpp
     option_parser.cpp
 )
 add_executable(btrader
