--- a/pylib/CMakeLists.txt
+++ b/pylib/CMakeLists.txt
@@ -1,9 +1,17 @@
 set(PYJOUR_SRCS
     py_journal.cpp
 )
+add_library(pyinterface
+    ${PYJOUR_SRCS}
+)
+target_link_libraries(pyinterface PUBLIC
+    pybind11::embed
+    pyservice
+)
 
 pybind11_add_module(pybtrader
     pybtrader.cpp
-    ${PYJOUR_SRCS}
 )
-target_link_libraries(pybtrader PRIVATE pyservice)
+target_link_libraries(pybtrader PRIVATE
+    pyinterface
+)
