project: Make complie warning as error and fix them all. Then the bug in release running are fixed

--- a/infra/CMakeLists.txt
+++ b/infra/CMakeLists.txt
@@ -31,4 +31,5 @@ target_link_libraries(infra PUBLIC
     hv_static
     ${OPENSSL_LIBRARIES} # openssl
     spdlog::spdlog # spdlog
+    MurmurHash3
 )
