engines: Move cp/md/td to engines directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,7 @@ SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 add_subdirectory(infra)
 add_subdirectory(core)
 add_subdirectory(broker)
-add_subdirectory(md)
-add_subdirectory(td)
-add_subdirectory(cp)
+add_subdirectory(engines)
 add_subdirectory(strategy)
 add_subdirectory(strategies)
 add_subdirectory(algorithm)
