--- a/engines/cp/CMakeLists.txt
+++ b/engines/cp/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(computation
     ${src}
 )
 target_include_directories(computation PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${PROJECT_SOURCE_DIR}/strategy
 )
 target_link_libraries(computation PUBLIC strategy core)
