dep: Add submodule ta-lib

--- a/strategy/CMakeLists.txt
+++ b/strategy/CMakeLists.txt
@@ -4,4 +4,8 @@ file(GLOB src
 add_library(strategy
     ${src}
 )
-target_link_libraries(strategy PUBLIC core)
+target_link_libraries(strategy
+    PUBLIC
+    core
+    ${TA-LIB}
+)
