--- a/tradeview/CMakeLists.txt
+++ b/tradeview/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_subdirectory(model)
 add_subdirectory(qml)
 add_subdirectory(control)
+
+file(COPY ${CMAKE_SOURCE_DIR}/tradeview/run_tradeview.sh DESTINATION ${CMAKE_BINARY_DIR})
