--- a/tradeview/guiconfig.json
+++ b/tradeview/guiconfig.json
@@ -1,5 +1,6 @@
 {
     "config": {
+        "simulation": true,
         "core_engine_config": "./core_engine.json",
         "instruments_file": "./instruments.json"
     }
