--- a/tradeview/guiconfig.json
+++ b/tradeview/guiconfig.json
@@ -1,7 +1,7 @@
 {
     "config": {
         "simulation": true,
-        "core_engine_config": "./core_engine.json",
+        "core_engine_config": "./main_cfg.tpl.json",
         "instruments_file": "./instruments.json"
     }
 }
