--- a/engines/cp/CMakeLists.txt
+++ b/engines/cp/CMakeLists.txt
@@ -8,4 +8,4 @@ target_include_directories(computation PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${PROJECT_SOURCE_DIR}/strategy
 )
-target_link_libraries(computation PUBLIC strategy core)
+target_link_libraries(computation PUBLIC strategy core extension)
