feat: strategies: Support self-defined strategies

--- a/strategies/CMakeLists.txt
+++ b/strategies/CMakeLists.txt
@@ -1,6 +1,14 @@
 include_directories(${PROJECT_SOURCE_DIR}/strategy)
 
-add_library(MyStrategy SHARED
+if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/strategylib)
+    add_subdirectory(strategylib)
+endif()
+
+add_library(strategies SHARED
     my_strategy.cpp
 )
-target_link_libraries(MyStrategy PUBLIC strategy)
+target_link_libraries(strategies PUBLIC strategy)
+
+if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/strategylib)
+    target_link_libraries(strategies PUBLIC strategylib)
+endif()
