fix: Fix libstrategies.so symbol lost

--- a/strategies/CMakeLists.txt
+++ b/strategies/CMakeLists.txt
@@ -4,11 +4,14 @@ if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/strategylib)
     add_subdirectory(strategylib)
 endif()
 
-add_library(strategies SHARED
-    my_strategy.cpp
-)
-target_link_libraries(strategies PUBLIC strategy)
-
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/strategylib)
-    target_link_libraries(strategies PUBLIC strategylib)
+    add_library(strategies SHARED
+        my_strategy.cpp
+        $<TARGET_OBJECTS:strategylib>
+    )
+else()
+    add_library(strategies SHARED
+        my_strategy.cpp
+    )
 endif()
+target_link_libraries(strategies PUBLIC strategy)
