example: Add examples for running the trading system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,4 +25,8 @@ add_subdirectory(tests)
 add_subdirectory(tradeview)
 add_subdirectory(extension)
 
-file(COPY ${CMAKE_SOURCE_DIR}/config-tpl DESTINATION ${CMAKE_BINARY_DIR})
+file(CREATE_LINK
+    ${CMAKE_SOURCE_DIR}/config-tpl
+    ${CMAKE_BINARY_DIR}/config-tpl
+    SYMBOLIC
+)
