--- a/strategies/CMakeLists.txt
+++ b/strategies/CMakeLists.txt
@@ -4,14 +4,18 @@ if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/strategylib)
     add_subdirectory(strategylib)
 endif()
 
+file(GLOB src
+    *.cpp
+)
+
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/strategylib)
     add_library(strategies SHARED
-        my_strategy.cpp
+        ${src}
         $<TARGET_OBJECTS:strategylib>
     )
 else()
     add_library(strategies SHARED
-        my_strategy.cpp
+        ${src}
     )
 endif()
 target_link_libraries(strategies PUBLIC strategy)
